gitops/prometheus/deployment/prometheus-middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: middleware-prometheus-redirect-https
  namespace: monitoring
spec:
  redirectScheme:
    scheme: https
    permanent: true
    port: "443"
