gitops/prometheus/deployment/prometheus-ingressroute-https.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus-ingressroute-https
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
  - kind: Rule
    match: Host(`prometheus.jed.local`)
    services:
    - name: prometheus-service
      port: 8080
    middlewares:
    - name: middleware-prometheus-redirect-https
      namespace: monitoring
  tls:
    secretName: prometheus-ingress
